objects/Deliverable_Contributor__c.object
<CustomObject>
    <fields>
        <fullName>Deliverable_Name__c</fullName>
        <formula>Stage_Deliverable_ID__r.Deliverable_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deliverable Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Role ID</label>
        <referenceTo>Role__c</referenceTo>
        <relationshipLabel>Deliverable Contributors</relationshipLabel>
        <relationshipName>Deliverable_Contributors</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <formula>Role_ID__r.Role_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Deliverable_ID__c</fullName>
        <label>Stage Deliverable ID</label>
        <referenceTo>Stage_Deliverable__c</referenceTo>
        <relationshipLabel>Deliverable Contributors</relationshipLabel>
        <relationshipName>Deliverable_Contributors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Stage_Name__c</fullName>
        <formula>Stage_Deliverable_ID__r.Stage_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Name</label>
        <type>Text</type>
    </fields>
    <label>Deliverable Contributor</label>
    <nameField>
        <displayFormat>DCID-{0000}</displayFormat>
        <label>Deliverable Contributor ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deliverable Contributors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>